--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/4msha/nodejs-selenium-sample#readme",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "selenium-webdriver": "^4.9.0"
   }
 }
